trunk/ tinyasn1 --username gmamais/tinyAsn1/asn1Parser.cs
// $ANTLR 3.0 C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g 2007-05-31 14:30:30



using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



public class asn1Parser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"DEFINITIONS", 
		"EXPLICIT", 
		"TAGS", 
		"IMPLICIT", 
		"AUTOMATIC", 
		"EXTENSIBILITY", 
		"IMPLIED", 
		"BEGIN", 
		"END", 
		"INT", 
		"EXPORTS", 
		"ALL", 
		"IMPORTS", 
		"FROM", 
		"UNIVERSAL", 
		"APPLICATION", 
		"PRIVATE", 
		"NULL", 
		"BIT", 
		"STRING", 
		"BOOLEAN", 
		"ENUMERATED", 
		"INTEGER", 
		"REAL", 
		"CHOICE", 
		"SEQUENCE", 
		"SET", 
		"OPTIONAL", 
		"DEFAULT", 
		"OF", 
		"SIZE", 
		"OCTET", 
		"NumericString", 
		"PrintableString", 
		"VisibleString", 
		"IA5String", 
		"TeletexString", 
		"VideotexString", 
		"GraphicString", 
		"GeneralString", 
		"UniversalString", 
		"BMPString", 
		"UTF8String", 
		"UID", 
		"OBJECT", 
		"IDENTIFIER", 
		"RELATIVE_OID", 
		"WITH", 
		"COMPONENTS", 
		"PRESENT", 
		"ABSENT", 
		"BitStringLiteral", 
		"OctectStringLiteral", 
		"TRUE", 
		"FALSE", 
		"StringLiteral", 
		"MIN", 
		"MAX", 
		"LID", 
		"UnionMark", 
		"EXCEPT", 
		"IntersectionMark", 
		"INCLUDES", 
		"COMPONENT", 
		"PATTERN", 
		"STR", 
		"WS", 
		"COMMENT", 
		"COMMENT2", 
		"'::='", 
		"'{'", 
		"'}'", 
		"'('", 
		"')'", 
		"';'", 
		"','", 
		"'['", 
		"']'", 
		"'...'", 
		"'[['", 
		"']]'", 
		"'.'", 
		"'+'", 
		"'-'", 
		"'<'", 
		"'..'", 
		"'!'", 
		"':'"
    };

    public const int COMMENT2 = 72;
    public const int UnionMark = 63;
    public const int IA5String = 39;
    public const int TeletexString = 40;
    public const int COMPONENTS = 52;
    public const int APPLICATION = 19;
    public const int OctectStringLiteral = 56;
    public const int NumericString = 36;
    public const int BitStringLiteral = 55;
    public const int PrintableString = 37;
    public const int MAX = 61;
    public const int EXPLICIT = 5;
    public const int EXCEPT = 64;
    public const int EOF = -1;
    public const int PATTERN = 68;
    public const int INCLUDES = 66;
    public const int STR = 69;
    public const int BOOLEAN = 24;
    public const int OBJECT = 48;
    public const int EXPORTS = 14;
    public const int PRESENT = 53;
    public const int IDENTIFIER = 49;
    public const int ALL = 15;
    public const int BEGIN = 11;
    public const int RELATIVE_OID = 50;
    public const int GeneralString = 43;
    public const int UID = 47;
    public const int COMMENT = 71;
    public const int COMPONENT = 67;
    public const int BMPString = 45;
    public const int CHOICE = 28;
    public const int WITH = 51;
    public const int INTEGER = 26;
    public const int EXTENSIBILITY = 9;
    public const int IMPLICIT = 7;
    public const int PRIVATE = 20;
    public const int DEFINITIONS = 4;
    public const int NULL = 21;
    public const int DEFAULT = 32;
    public const int TAGS = 6;
    public const int SET = 30;
    public const int INT = 13;
    public const int MIN = 60;
    public const int UTF8String = 46;
    public const int OF = 33;
    public const int TRUE = 57;
    public const int IMPLIED = 10;
    public const int LID = 62;
    public const int OPTIONAL = 31;
    public const int StringLiteral = 59;
    public const int REAL = 27;
    public const int SEQUENCE = 29;
    public const int ENUMERATED = 25;
    public const int VideotexString = 41;
    public const int WS = 70;
    public const int ABSENT = 54;
    public const int GraphicString = 42;
    public const int IntersectionMark = 65;
    public const int BIT = 22;
    public const int IMPORTS = 16;
    public const int VisibleString = 38;
    public const int UniversalString = 44;
    public const int FROM = 17;
    public const int END = 12;
    public const int FALSE = 58;
    public const int UNIVERSAL = 18;
    public const int SIZE = 34;
    public const int OCTET = 35;
    public const int STRING = 23;
    public const int AUTOMATIC = 8;
    
    
        public asn1Parser(ITokenStream input) 
    		: base(input)
    	{
    		InitializeCyclicDFAs();
        }
        

    override public string[] TokenNames
	{
		get { return tokenNames; }
	}

    override public string GrammarFileName
	{
		get { return "C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g"; }
	}

    
    public override void ReportError(RecognitionException e) {
    	base.ReportError(e);
            throw e;
    }
    


    
    // $ANTLR start moduleDefinitions
    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:18:1: moduleDefinitions : ( moduleDefinition )* ;
    public void moduleDefinitions() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:19:4: ( ( moduleDefinition )* )
            // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:19:4: ( moduleDefinition )*
            {
            	// C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:19:4: ( moduleDefinition )*
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);
            	    
            	    if ( (LA1_0 == UID) )
            	    {
            	        alt1 = 1;
            	    }
            	    
            	
            	    switch (alt1) 
            		{
            			case 1 :
            			    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:19:4: moduleDefinition
            			    {
            			    	PushFollow(FOLLOW_moduleDefinition_in_moduleDefinitions35);
            			    	moduleDefinition();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop1;
            	    }
            	} while (true);
            	
            	loop1:
            		;	// Stops C# compiler whinging that label 'loop1' has no statements

            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end moduleDefinitions

    
    // $ANTLR start moduleDefinition
    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:21:1: moduleDefinition : modulereference ( definitiveIdentifier )? DEFINITIONS ( EXPLICIT TAGS | IMPLICIT TAGS | AUTOMATIC TAGS )? ( EXTENSIBILITY IMPLIED )? '::=' BEGIN ( exports )? ( imports )? ( typeAssigment | valueAssigment | valueSetAssigment )* END ;
    public void moduleDefinition() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:21:22: ( modulereference ( definitiveIdentifier )? DEFINITIONS ( EXPLICIT TAGS | IMPLICIT TAGS | AUTOMATIC TAGS )? ( EXTENSIBILITY IMPLIED )? '::=' BEGIN ( exports )? ( imports )? ( typeAssigment | valueAssigment | valueSetAssigment )* END )
            // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:21:22: modulereference ( definitiveIdentifier )? DEFINITIONS ( EXPLICIT TAGS | IMPLICIT TAGS | AUTOMATIC TAGS )? ( EXTENSIBILITY IMPLIED )? '::=' BEGIN ( exports )? ( imports )? ( typeAssigment | valueAssigment | valueSetAssigment )* END
            {
            	PushFollow(FOLLOW_modulereference_in_moduleDefinition46);
            	modulereference();
            	followingStackPointer_--;

            	// C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:21:38: ( definitiveIdentifier )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);
            	
            	if ( (LA2_0 == 74) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:21:38: definitiveIdentifier
            	        {
            	        	PushFollow(FOLLOW_definitiveIdentifier_in_moduleDefinition48);
            	        	definitiveIdentifier();
            	        	followingStackPointer_--;

            	        
            	        }
            	        break;
            	
            	}

            	Match(input,DEFINITIONS,FOLLOW_DEFINITIONS_in_moduleDefinition54); 
            	// C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:23:4: ( EXPLICIT TAGS | IMPLICIT TAGS | AUTOMATIC TAGS )?
            	int alt3 = 4;
            	switch ( input.LA(1) ) 
            	{
            	    case EXPLICIT:
            	    	{
            	        alt3 = 1;
            	        }
            	        break;
            	    case IMPLICIT:
            	    	{
            	        alt3 = 2;
            	        }
            	        break;
            	    case AUTOMATIC:
            	    	{
            	        alt3 = 3;
            	        }
            	        break;
            	}
            	
            	switch (alt3) 
            	{
            	    case 1 :
            	        // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:23:5: EXPLICIT TAGS
            	        {
            	        	Match(input,EXPLICIT,FOLLOW_EXPLICIT_in_moduleDefinition60); 
            	        	Match(input,TAGS,FOLLOW_TAGS_in_moduleDefinition62); 
            	        
            	        }
            	        break;
            	    case 2 :
            	        // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:23:21: IMPLICIT TAGS
            	        {
            	        	Match(input,IMPLICIT,FOLLOW_IMPLICIT_in_moduleDefinition66); 
            	        	Match(input,TAGS,FOLLOW_TAGS_in_moduleDefinition68); 
            	        
            	        }
            	        break;
            	    case 3 :
            	        // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:23:37: AUTOMATIC TAGS
            	        {
            	        	Match(input,AUTOMATIC,FOLLOW_AUTOMATIC_in_moduleDefinition72); 
            	        	Match(input,TAGS,FOLLOW_TAGS_in_moduleDefinition74); 
            	        
            	        }
            	        break;
            	
            	}

            	// C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:24:4: ( EXTENSIBILITY IMPLIED )?
            	int alt4 = 2;
            	int LA4_0 = input.LA(1);
            	
            	if ( (LA4_0 == EXTENSIBILITY) )
            	{
            	    alt4 = 1;
            	}
            	switch (alt4) 
            	{
            	    case 1 :
            	        // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:24:5: EXTENSIBILITY IMPLIED
            	        {
            	        	Match(input,EXTENSIBILITY,FOLLOW_EXTENSIBILITY_in_moduleDefinition82); 
            	        	Match(input,IMPLIED,FOLLOW_IMPLIED_in_moduleDefinition84); 
            	        
            	        }
            	        break;
            	
            	}

            	Match(input,73,FOLLOW_73_in_moduleDefinition91); 
            	Match(input,BEGIN,FOLLOW_BEGIN_in_moduleDefinition93); 
            	// C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:26:4: ( exports )?
            	int alt5 = 2;
            	int LA5_0 = input.LA(1);
            	
            	if ( (LA5_0 == EXPORTS) )
            	{
            	    alt5 = 1;
            	}
            	switch (alt5) 
            	{
            	    case 1 :
            	        // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:26:5: exports
            	        {
            	        	PushFollow(FOLLOW_exports_in_moduleDefinition99);
            	        	exports();
            	        	followingStackPointer_--;

            	        
            	        }
            	        break;
            	
            	}

            	// C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:27:4: ( imports )?
            	int alt6 = 2;
            	int LA6_0 = input.LA(1);
            	
            	if ( (LA6_0 == IMPORTS) )
            	{
            	    alt6 = 1;
            	}
            	switch (alt6) 
            	{
            	    case 1 :
            	        // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:27:5: imports
            	        {
            	        	PushFollow(FOLLOW_imports_in_moduleDefinition107);
            	        	imports();
            	        	followingStackPointer_--;

            	        
            	        }
            	        break;
            	
            	}

            	// C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:28:4: ( typeAssigment | valueAssigment | valueSetAssigment )*
            	do 
            	{
            	    int alt7 = 4;
            	    int LA7_0 = input.LA(1);
            	    
            	    if ( (LA7_0 == UID) )
            	    {
            	        int LA7_2 = input.LA(2);
            	        
            	        if ( (LA7_2 == 73) )
            	        {
            	            alt7 = 1;
            	        }
            	        else if ( ((LA7_2 >= NULL && LA7_2 <= BIT) || (LA7_2 >= BOOLEAN && LA7_2 <= SET) || (LA7_2 >= OCTET && LA7_2 <= OBJECT) || LA7_2 == RELATIVE_OID || LA7_2 == 80) )
            	        {
            	            alt7 = 3;
            	        }
            	        
            	    
            	    }
            	    else if ( (LA7_0 == LID) )
            	    {
            	        alt7 = 2;
            	    }
            	    
            	
            	    switch (alt7) 
            		{
            			case 1 :
            			    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:29:5: typeAssigment
            			    {
            			    	PushFollow(FOLLOW_typeAssigment_in_moduleDefinition120);
            			    	typeAssigment();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            			case 2 :
            			    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:30:6: valueAssigment
            			    {
            			    	PushFollow(FOLLOW_valueAssigment_in_moduleDefinition127);
            			    	valueAssigment();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            			case 3 :
            			    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:31:6: valueSetAssigment
            			    {
            			    	PushFollow(FOLLOW_valueSetAssigment_in_moduleDefinition134);
            			    	valueSetAssigment();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop7;
            	    }
            	} while (true);
            	
            	loop7:
            		;	// Stops C# compiler whinging that label 'loop7' has no statements

            	Match(input,END,FOLLOW_END_in_moduleDefinition145); 
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end moduleDefinition

    
    // $ANTLR start definitiveIdentifier
    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:34:1: definitiveIdentifier : '{' ( definitiveObjIdComponent )* '}' ;
    public void definitiveIdentifier() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:35:4: ( '{' ( definitiveObjIdComponent )* '}' )
            // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:35:4: '{' ( definitiveObjIdComponent )* '}'
            {
            	Match(input,74,FOLLOW_74_in_definitiveIdentifier153); 
            	// C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:35:8: ( definitiveObjIdComponent )*
            	do 
            	{
            	    int alt8 = 2;
            	    int LA8_0 = input.LA(1);
            	    
            	    if ( (LA8_0 == INT || LA8_0 == LID) )
            	    {
            	        alt8 = 1;
            	    }
            	    
            	
            	    switch (alt8) 
            		{
            			case 1 :
            			    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:35:8: definitiveObjIdComponent
            			    {
            			    	PushFollow(FOLLOW_definitiveObjIdComponent_in_definitiveIdentifier155);
            			    	definitiveObjIdComponent();
            			    	followingStackPointer_--;

            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop8;
            	    }
            	} while (true);
            	
            	loop8:
            		;	// Stops C# compiler whinging that label 'loop8' has no statements

            	Match(input,75,FOLLOW_75_in_definitiveIdentifier158); 
            
            }
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end definitiveIdentifier

    
    // $ANTLR start definitiveObjIdComponent
    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:38:1: definitiveObjIdComponent : ( identifier ( '(' INT ')' )? | INT );
    public void definitiveObjIdComponent() // throws RecognitionException [1]
    {   
        try 
    	{
            // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:39:4: ( identifier ( '(' INT ')' )? | INT )
            int alt10 = 2;
            int LA10_0 = input.LA(1);
            
            if ( (LA10_0 == LID) )
            {
                alt10 = 1;
            }
            else if ( (LA10_0 == INT) )
            {
                alt10 = 2;
            }
            else 
            {
                NoViableAltException nvae_d10s0 =
                    new NoViableAltException("38:1: definitiveObjIdComponent : ( identifier ( '(' INT ')' )? | INT );", 10, 0, input);
            
                throw nvae_d10s0;
            }
            switch (alt10) 
            {
                case 1 :
                    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:39:4: identifier ( '(' INT ')' )?
                    {
                    	PushFollow(FOLLOW_identifier_in_definitiveObjIdComponent171);
                    	identifier();
                    	followingStackPointer_--;

                    	// C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:39:15: ( '(' INT ')' )?
                    	int alt9 = 2;
                    	int LA9_0 = input.LA(1);
                    	
                    	if ( (LA9_0 == 76) )
                    	{
                    	    alt9 = 1;
                    	}
                    	switch (alt9) 
                    	{
                    	    case 1 :
                    	        // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:39:17: '(' INT ')'
                    	        {
                    	        	Match(input,76,FOLLOW_76_in_definitiveObjIdComponent175); 
                    	        	Match(input,INT,FOLLOW_INT_in_definitiveObjIdComponent177); 
                    	        	Match(input,77,FOLLOW_77_in_definitiveObjIdComponent179); 
                    	        
                    	        }
                    	        break;
                    	
                    	}

                    
                    }
                    break;
                case 2 :
                    // C:\\prj\\DataModeling\\tinyAsn1\\tinyAsn1\\asn1.g:40:4: INT
                    {
                    	Match(input,INT,FOLLOW_INT_in_definitiveObjIdComponent187); 
                    
                    }
                    break;
            
            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return ;
    }
    // $ANTLR end definitiveObjIdComponent
